# h3-lorawan-regions

./: Cargo.toml  build.rs
src/: lib.rs
src/nocompact/: AS923-1B.res7.h3idx  AS923-4.res7.h3idx  KR920.res7.h3idx
